# potential-fishstick

./: .gitignore  CMakeLists.txt  build  main.cpp  run
src/: house.txt  main.cpp  shader.h
src/shaders/: fragShader.frag  vertShader.vert
